# tithe-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tithe_extractor/: __init__.py  constants.py  datautils.py  scryfall_api.py  test_scryfall_api.py
