[project]
name = "tithe-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rmfgaming", email = "rmfgamingow@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
